<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.photoweatherapp.ui.weatherInfo.WeatherInfoFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.photoweatherapp.ui.weatherInfo.WeatherInfoViewModel" />
   
        <variable
            name="isLoading"
            type="Boolean" />
        
        <import type="android.view.View"/>
   
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/ivPhoto"
                imagePath="@{viewModel.weatherItemData.photoPath}"
                isThumbnail="@{false}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/transparent_black" />

            <LinearLayout
                android:id="@+id/llLoadingSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="@{isLoading?View.VISIBLE:View.GONE}"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvUpdatingData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="Loading Weather Data"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnCompletePayment" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    android:padding="5dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/edtCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/accent"
                android:hint="@string/city"
                android:inputType="text"
                android:text="@{viewModel.weatherItemData.cityName}"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/edtTemp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.52"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/edtTemp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/accent"
                android:hint="@string/temperature_c"
                android:inputType="numberDecimal"
                android:text="@{String.valueOf(viewModel.weatherItemData.temp)}"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/edtCondition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtCity" />


            <EditText
                android:id="@+id/edtCondition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/accent"
                android:hint="@string/weather_condition"
                android:inputType="numberDecimal"
                android:text="@{viewModel.weatherItemData.description}"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTemp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="20dp"
                android:backgroundTint="@color/accent"
                android:layout_marginTop="50dp"
                android:onClick="@{()->viewModel.onSaveBtnClick(edtCity.getText().toString(),edtTemp.getText().toString(),edtCondition.getText().toString())}"
                app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/btnCancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtCondition"
                app:strokeColor="@color/accent" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="@{()->viewModel.onCancelClick()}"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@null"
                app:cornerRadius="20dp"
                app:strokeColor="@color/accent"
                app:strokeWidth="1dp"
                android:backgroundTint="@android:color/transparent"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnSave"
                app:layout_constraintTop_toTopOf="@+id/btnSave" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
